2006-11-24 Chris Morley <ob@gaseq.co.uk>

	src/obconversion.cpp(Write),(Read): Check for stream pointers
	being NULL.

2006-11-24 Chris Morley <ob@gaseq.co.uk>

	src/obconversion.h, src/obconversion.cpp: Added CloseOutFile()
	at the suggestion of Noel O'Boyle.
	
2006-11-24  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005: added libxml2.dll (taken from Chris' Windows OB GUI
	distribution)
	* windows-vc2005/OBPython/logo.bmp, setup.py: new files added that
	allow the creation of a Windows OB scripting installer
	* windows-vc2005/OBPython/Readme.txt: Updated with instructions on
	running setup.py

2006-11-23 Chris Morley <ob@gaseq.co.uk>

	windows-vc2005: Added OBPython project to allow OB to be used
	form Python on Windows.
	
	src/parsmart.h(SmartsLexReplace), src/ring.h(CompareRingSize):
	Added OBAPI to declarations of these exported global functions.
	
2006-11-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/atom.h, src/base.h, src/bond.h, src/residue.h, src/mol.h,
	src/ring.h, src/mol.cpp, src/base.cpp, src/obiter.h: Remove
	OBNodeBase, OBEdgeBase, and OBGraphBase classes, contributed by
	Gerd Menche.

	* tools/obprop.cpp: Ditto. Example of changing iterators to new format.

	* scripts/*: Updated based on above changes.

	* src/formats/xml/cmlformat.cpp: Change size_t to
	string::size_type to be sure of 64-bit correctness.

2006-11-17 Chris Morley <ob@gaseq.co.uk>

	windows-vc2005: Added projects for OpenBabelDLL, OBComLn, and OBGUII
	
2006-11-18  Michael Banck <mbanck@gmx.net>

	* test/textbuffer.cpp: Do not include "zipstream.h" if HAVE_LIBZ is 
	not defined.  Do not check for a gzip'd input stream if HAVE_LIBZ is
	not defined.

2006-11-18  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/testpybel.py: Needed to relax one of the tests of
	molecular weight, as it was failing for the OB2.1b2 snapshot (there
	must have been some changes to the atomic masses). Also,
	corrected tolerance tests to use the absolute value of the difference